--- a/references.bib
+++ b/references.bib
@@ -8,3 +8,61 @@
   year={2020},
   publisher={Taylor \& Francis}
 }
+
+@article{van2013wu,
+  title={The WU-Minn human connectome project: an overview},
+  author={Van Essen, David C and Smith, Stephen M and Barch, Deanna M and Behrens, Timothy EJ and Yacoub, Essa and Ugurbil, Kamil and Wu-Minn HCP Consortium and others},
+  journal={Neuroimage},
+  volume={80},
+  pages={62--79},
+  year={2013},
+  publisher={Elsevier}
+}
+
+@article{mueller2005alzheimer,
+  title={The Alzheimer's disease neuroimaging initiative},
+  author={Mueller, Susanne G and Weiner, Michael W and Thal, Leon J and Petersen, Ronald C and Jack, Clifford and Jagust, William and Trojanowski, John Q and Toga, Arthur W and Beckett, Laurel},
+  journal={Neuroimaging Clinics},
+  volume={15},
+  number={4},
+  pages={869--877},
+  year={2005},
+  publisher={Elsevier}
+}
+
+@article{mejia2022longitudinal,
+  title={Longitudinal surface-based spatial Bayesian GLM reveals complex trajectories of motor neurodegeneration in ALS},
+  author={Mejia, Amanda F and Koppelmans, Vincent and Jelsone-Swain, Laura and Kalra, Sanjay and Welsh, Robert C},
+  journal={NeuroImage},
+  volume={255},
+  pages={119180},
+  year={2022},
+  publisher={Elsevier}
+}
+
+@article{singh2025robust,
+  title={Robust outlier detection for heterogeneous distributions applicable to censoring in functional MRI},
+  author={Singh Saluja, Saranjeet and Parlak, Fatma and Pham, Damon and Mejia, Amanda},
+  journal={arXiv e-prints},
+  pages={arXiv--2505},
+  year={2025}
+}
+
+@article{gordon2017precision,
+  title={Precision functional mapping of individual human brains},
+  author={Gordon, Evan M and Laumann, Timothy O and Gilmore, Adrian W and Newbold, Dillan J and Greene, Deanna J and Berg, Jeffrey J and Ortega, Mario and Hoyt-Drazen, Catherine and Gratton, Caterina and Sun, Haoxin and others},
+  journal={Neuron},
+  volume={95},
+  number={4},
+  pages={791--807},
+  year={2017},
+  publisher={Elsevier}
+}
+
+@article{yeo2011organization,
+  title={The organization of the human cerebral cortex estimated by intrinsic functional connectivity},
+  author={Yeo, BT Thomas and Krienen, Fenna M and Sepulcre, Jorge and Sabuncu, Mert R and Lashkari, Danial and Hollinshead, Marisa and Roffman, Joshua L and Smoller, Jordan W and Z{\"o}llei, Lilla and Polimeni, Jonathan R and others},
+  journal={Journal of neurophysiology},
+  year={2011},
+  publisher={American Physiological Society Bethesda, MD}
+}
